--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ nav{
 nav ul{
     display: flex;
     justify-content: space-between;
-    width: 30%;
+    width: 40%;
     align-items: center;
 }
 nav ul li{
@@ -27,8 +27,8 @@ nav li button{
 }
 .first-sec{
     background-color: rgb(230, 224, 224);
-    margin-left: 250px;
-    margin-right: 250px;
+    margin-left: 350px;
+    margin-right: 400px;
     margin-top: 100px;
     
 }
@@ -44,7 +44,7 @@ nav li button{
     align-items: center;
     justify-content: space-between;
     margin-top: 50px;
-    margin-right: 100px;
+    margin-right: 50px;
    
     
 }
@@ -71,10 +71,11 @@ nav li button{
   button
 {
     background-color: rgba(240, 248, 255, 0.931);
-    border-radius: 8px;
+    border-radius: 15px;
     border-color: rgb(241, 231, 231);
     margin: 40px;
-    padding: 10px;
+    padding: 20px;
+    margin-right: 150px;
     
 }
   ul li
@@ -85,10 +86,27 @@ nav li button{
    align-items: center;
    
   } 
- h1{
+ picture h1{
     color:rgb(90, 88, 88);
+    font-family: Arial, Helvetica, sans-serif;
+   
  }
-
-
+ .picdiv-1
+ {
+    margin-top: 50px;
+ }
+ .picdiv-2
+ {
+    display: flex;
+    margin-left: 100px;
+    margin-top: 50px;
+   
+ }
+ .picdiv-3
+ {
+    display: flex;
+    margin-left: 250px;
+   
+ }
 
 
